--- a/image_api/templates/main_app.html
+++ b/image_api/templates/main_app.html
@@ -10,23 +10,37 @@
 <body>
 {% verbatim %}
 <div class="container" id="images_app">
-    <form @submit.prevent="submitForm">
-        <div class="form-group">
-            <label for="description">Описание файла:</label>
-            <input type="text" v-model="newImage.description" class="form-control" id="description" required>
-        </div>
-        <div class="form-group">
-            <label for="file">Выберите JSON файл:</label>
-            <input type="file" @change="handleFileChange" class="form-control-file" id="file" accept=".json" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Отправить</button>
-    </form>
-    <button class="btn btn-secondary mt-2" @click="requestData">Запросить данные</button>
-    <div class="btn btn-success btn-lg mt-2" v-for="image in images">
+    <button class="btn btn-primary" @click="requestData">Запросить данные</button>
+
+    <!-- Форма для добавления файла в базу данных -->
+    <div class="mt-3">
+        <h2>Добавить файл в базу данных</h2>
+        <form @submit.prevent="addImageData">
+            <div class="form-group">
+                <label for="description">Описание файла:</label>
+                <input type="text" id="description" v-model="newImage.description" class="form-control" required />
+            </div>
+
+            <div class="form-group">
+                <label for="imageData">JSON данные:</label>
+                <textarea id="imageData" v-model="newImage.image_data" class="form-control" required></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-success">Добавить в базу данных</button>
+
+
+            <div class="mt-3">
+    <h2>Список изображений</h2>
+    <div class="btn btn-success btn-lg" v-for="image in images">
         Descriptions: {{ image.description }}
         <br>
         Image_data: {{ image.image_data }}
+        <button class="btn btn-danger" @click="deleteImageData(image.id)">Удалить</button>
     </div>
+</div>
+        </form>
+    </div>
+
 </div>
 {% endverbatim %}
 
